--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Minimal AT Protocol status app using xyz.statusphere.status lexicon",
   "type": "module",
   "scripts": {
-    "dev": "bun run src/index.ts"
+    "dev": "bun run src/index.ts",
+    "backfill": "bun run src/backfill.ts"
   },
   "dependencies": {
     "@atcute/client": "^4.0.3",
